[package]
name = "phonon_showcase"
version = "0.1.0"
edition = "2021"

[features]
default = ["dynamic_linking"]
dynamic_linking = ["bevy/dynamic_linking"]

[dependencies]
bevy = "0.13"
bevy_fmod = { git = "https://github.com/Salzian/bevy_fmod.git", branch = "main" }
bevy_fmod_phonon = { path = "C:/rust/bevy_fmod_phonon" } #todo
bevy_fps_controller = "0.2"
bevy_rapier3d = "0.25"
bevy-scene-hook = "10"
iyes_perf_ui = "0.2"
bevy-inspector-egui = "0.23"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3